fix cards top margin on mobile

--- a/api/app/assets/stylesheets/site.scss
+++ b/api/app/assets/stylesheets/site.scss
@@ -2333,7 +2333,7 @@ p.content a {
         .card {
             opacity: 1 !important;
             float: left;
-            margin: 0px 10px;
+            margin: 0 10px;
             &.text {
                 p.text {
                     font-size: 15px;
